More work to 175

--- a/lesson_3/users_and_interests/users.yaml
+++ b/lesson_3/users_and_interests/users.yaml
@@ -17,3 +17,9 @@
   - politics
   - history
   - birding
+:derek:
+  :email: derek.novak1@gmail.com
+  :interests:
+  - music
+  - cycling
+  - being a badass programmer
