--- a/lesson_8/bike_shop/Gemfile
+++ b/lesson_8/bike_shop/Gemfile
@@ -4,12 +4,9 @@ gem "sinatra"
 gem "sinatra-contrib"
 gem "erubis"
 gem "webrick"
-gem 'redcarpet'
-gem 'yaml'
-gem 'bcrypt'
+gem "yaml"
 
 gem 'minitest'
 gem 'rack-test'
-
 
 ruby "3.2.2"
