--- a/lesson_8/bike_shop/users.yml
+++ b/lesson_8/bike_shop/users.yml
@@ -4,9 +4,15 @@ Derek Novak:
     last_name: Novak
     phone_number: '2543718698'
     email: derek.novak1@gmail.com
+    bicycles:
+        - Cannondale Synapse
+        - Trek Marlin
 John Doe:
     member_number: '2'
     first_name: John
     last_name: Doe
     phone_number: '1234567890'
     email: john.doe@gmail.com
+    bicycles:
+        - Specialized Roubaix
+        - Salsa Rangefinder
